--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,9 @@
 	</head>
 	<body>
 		<div>
-			<button onclick="createNewRoom('nameOfNewRoom')">Create new Party link!</button>
+			<button onclick="createNewRoom()">Create new Party link!</button>
 		</div>
-		<div>
-			The name of your new room is <span id="nameOfNewRoom"></span>.
-		</div>
+
 		<script type="text/javascript" src="js/create_room.js"></script>
 	</body>
 </html>
